fix(header): lower z-index, don't overide the toc menu

--- a/web_modules/Header/index.css
+++ b/web_modules/Header/index.css
@@ -9,7 +9,6 @@
   opacity: 0;
   transition: opacity 250ms linear;
   pointer-events: none;
-  z-index: 10;
 }
 
 .dock {
